# lazyissues

./: Cargo.toml  README.md  flake.nix
src/: config.rs  file_explorer.rs  graphql_requests.rs  lib.rs  logging.rs  main.rs  tab_menu.rs  ui.rs
src/config/: git.rs
src/graphql/: queries.github.graphql
src/ui/: detail_view.rs  file_explorer.rs  issues_view.rs  layouts.rs  list_view.rs  remote_explorer.rs  tab_menu.rs  ui_stack.rs
