[package]
name = "rust_issue_handler"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "5.0.1"
graphql_client = "0.14.0"
ratatui = "0.28.1"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
toml = "0.8.19"
