[package]
name = "lazyissues"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "5.0.1"
env_logger = "0.11.6"
git2 = "0.20.1"
graphql_client = "0.14.0"
kdl = "6.3.4"
keyring = "3.6.1"
log = "0.4.25"
ratatui = "0.28.1"
regex = "1.11.1"
reqwest = { version = "0.12.8", features = ["json", "native-tls-vendored"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
